chore: adding rooms module, removing unecessary code from auth service, and added default page size for findAll endpoint
